package com.joseneto.englishverse.model;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import com.joseneto.englishverse.model.enums.NivelDificuldade;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import com.fasterxml.jackson.annotation.JsonIgnore;

@Entity
@Table(name = "modulos")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Modulo {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    // RELACIONAMENTO: Muitos Módulos pertencem a Um Tópico
    // O 'optional = false' obriga o módulo a ter um tópico
    @ManyToOne(optional = false) 
    @JoinColumn(name = "topico_id", nullable = false)
    private Topico topico;

    @Column(nullable = false)
    private String titulo;

    @Column(columnDefinition = "TEXT")
    private String descricao;

    @Column(name = "imagem_capa_url")
    private String imagemCapaUrl;

    // Botei um valor padrão 'false', pra tu não publicar aula incompleta sem querer
    @Column(nullable = false)
    private Boolean publicado = false;

    @Enumerated(EnumType.STRING)
    @Column(name = "nivel_dificuldade")
    private NivelDificuldade nivelDificuldade = NivelDificuldade.INICIANTE;

    @ManyToOne
    @JoinColumn(name = "criado_por_id")
    @JsonIgnore
    private Usuario criadoPor;
}
