package com.joseneto.englishverse.model;

import java.util.List;
import java.util.Map;

import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.type.SqlTypes;

import com.joseneto.englishverse.model.enums.TipoRecurso;
import com.joseneto.englishverse.model.enums.MediaCategory;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Table(name = "recursos_apresentacao")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class RecursoApresentacao {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    // FK: Muitos Recursos pertencem a Um Módulo
    @ManyToOne(optional = false)
    @JoinColumn(name = "modulo_id", nullable = false)
    private Modulo modulo;

    @Enumerated(EnumType.STRING)
    @Column(name = "tipo_recurso", nullable = false)
    private TipoRecurso tipoRecurso;

    @Enumerated(EnumType.STRING)
    @Column(name = "media_category")
    private MediaCategory mediaCategory;

    @Column(name = "url_recurso", nullable = false)
    private String urlRecurso; // Link do YouTube, S3, etc.

    @Column(columnDefinition = "TEXT")
    private String letra;
    
    // TEXT permite strings gigantes (maior que 255 caracteres)
    @Column(columnDefinition = "TEXT")
    private String transcricao;

    @JdbcTypeCode(SqlTypes.JSON)
    @Column(name = "blocos_jsonb", columnDefinition = "jsonb")
    private List<Map<String, Object>> blocos;

    // Pra controlar se esse vídeo aparece antes ou depois
    private Integer ordem;
}
